--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,24 +15,15 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 40px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 10px;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
